[package]
name = "hn"
version = "0.1.0"
description = "Hacker News Tauri App"
authors = ["you"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hackernews_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.93"
dirs = "5.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2.0.2"
tauri-plugin-log = { version = "2.0.3", features = ["colored"] }
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2.0.2"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
tracing = { version = "0.1.41", features = ["log"] }
